<resources>
    <string name="app_name">Login</string>
    <string name="name_label">Name</string>
    <string name="button">Submit</string>
    <string name="password"></string>
    <string name="name"></string>
    <string name="pass_label">Password</string>
    <string name="answer"></string>
    <string name="welcome_label">Welcome!</string>
    <string name="signup_label">Sign Up!</string>
    <string name="user_name_label">Username</string>
    <string name="pass_input_label">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_button">Sign Up</string>
</resources>
