<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signup_label_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_label"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="6dp" />

    <TextView
        android:id="@+id/username_label_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_label"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:id="@+id/pass_label_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_input_label"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="186dp" />

    <Button
        android:id="@+id/signupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="334dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="234dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="122dp" />
</android.support.constraint.ConstraintLayout>